@@ -1,11 +1,7 @@
-$NetBSD: distinfo,v 1.5 2004/06/24 14:43:29 jlam Exp $
+$NetBSD: distinfo,v 1.6 2004/09/07 01:47:28 jlam Exp $
 
-SHA1 (krb5-1.3.4.tar) = 4d6ae36055fce9d2aea5ae9349cdd81f803c6052
-Size (krb5-1.3.4.tar) = 6369280 bytes
-SHA1 (2004-002-patch_1.3.4.txt) = 20bc11080433a1025f3f0f03a88664d4c055e6f9
-Size (2004-002-patch_1.3.4.txt) = 7196 bytes
-SHA1 (2004-003-patch_1.3.4.txt) = 81c12ad33e4b5a76cd309deec23e4578773e22d5
-Size (2004-003-patch_1.3.4.txt) = 592 bytes
+SHA1 (krb5-1.3.6-signed.tar) = 5d9c7a594a0fc972d220e5bc345e8680a89e7b6d
+Size (krb5-1.3.6-signed.tar) = 6533120 bytes
 SHA1 (patch-aa) = 2f4e62e7c8cdee2f58f8dd5b385faea0253c0aa5
 SHA1 (patch-ab) = b9f2f54f9ecfe9eaa168bb68b695a454ac044b9d
 SHA1 (patch-ac) = e1282a6f00e439d83444f5d8f81dceab863ab1d5
